--- a/index.html
+++ b/index.html
@@ -3,11 +3,76 @@
 
 <head>
     <meta charset=utf-8/>
+    <title>hw-03</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 
 
 <body>
+    <h1>hw-03: interactive Webpage, and Marks & Channels</h1>
 
+    <div class="flexbox">
+            <div> 
+                <img src=img/vis1.png>
+            </div>
+            <div>
+                <h3>Marks</h3>
+                   <ul>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                <h3>Channels</h3>
+                    <ul>
+                        <li></li>
+                            <li></li>
+                        <li></li>
+                            <li></li>
+                    </ul>
+                <h3>Colormap(s)</h3>
+                    <ul>
+                        <li></li>
+                            <li></li>
+                        <li></li>
+                            <li></li>
+                    </ul>
+            </div>
+            <div>
+                <img src=img/vis2.png>
+            </div>
+            <div>
+                <h3>Marks</h3>
+                   <ul>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                <h3>Channels</h3>
+                    <ul>
+                        <li></li>
+                            <li></li>
+                        <li></li>
+                            <li></li>
+                    </ul>
+                <h3>Colormap(s)</h3>
+                    <ul>
+                        <li></li>
+                            <li></li>
+                        <li></li>
+                            <li></li>
+                    </ul>
+            </div>
+
+    </div>
+
+    <div>
+        <div id="Acknowledgements">
+        <h3 id="ack-header">Acknowledgements</h3>
+         <ul>
+            <li>https://www.w3schools.com/css/default.asp</li>
+            <li>https://www.geeksforgeeks.org/html-introduction/?ref=lbp</li>
+            <li>https://css-tricks.com/snippets/css/a-guide-to-flexbox/</li>
+            <li>https://www.w3schools.com/html/default.asp</li>
+        </ul>
+    </div>
 
 </body>
 
