--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link href="style.css" rel="stylesheet">
 </head>
 
-
 <body>
     <h1>hw-03: interactive Webpage, and Marks & Channels</h1>
 
@@ -18,22 +17,17 @@
             <div>
                 <h3>Marks</h3>
                    <ul>
-                        <li></li>
-                        <li></li>
+                        <li>Areas depicting each state in the United States of America</li>
+                        <li>Line depicting the electoral vote breakdown given this particular hypothetical</li>
                     </ul>
                 <h3>Channels</h3>
                     <ul>
-                        <li></li>
-                            <li></li>
-                        <li></li>
-                            <li></li>
+                        <li>Color to Distinguis which states would have voted Democratic and which states would have voted Republican</li>
+                        <li>Length of blue and red on the electroal vote breakdwon bar to show a distributon of total votes</li>
                     </ul>
                 <h3>Colormap(s)</h3>
                     <ul>
-                        <li></li>
-                            <li></li>
-                        <li></li>
-                            <li></li>
+                        <li>Categorical colormpa where red indicates Republican and blue indicates Democrat</li>
                     </ul>
             </div>
             <div>
@@ -42,25 +36,19 @@
             <div>
                 <h3>Marks</h3>
                    <ul>
-                        <li></li>
-                        <li></li>
+                        <li>Points indicating different batted balls in the 2015 MLB</li>
+                        <li>Lines indicating the general distribution of different hits (ground balls, line drives, fly balls)</li>
                     </ul>
                 <h3>Channels</h3>
                     <ul>
-                        <li></li>
-                            <li></li>
-                        <li></li>
-                            <li></li>
+                        <li>Position, both horizontally and vertically, as points are plotted based on both launch angle and speed off of the bat</li>
+                        <li>Color indicating score value </li>
                     </ul>
                 <h3>Colormap(s)</h3>
                     <ul>
-                        <li></li>
-                            <li></li>
-                        <li></li>
-                            <li></li>
+                        <li>Divergent colormap where two colors (purple and oragne) indicate the extremes of a range of hits (abover or below average) and white is a neutral color in the middle that indicates average</li>
                     </ul>
             </div>
-
     </div>
 
     <div>
